# hx

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  install.sh  mise.toml
.claude/: CLAUDE.md
.claude/rules/: rust.md
.claude/skills/hx/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  flakehub.yml  real-world.yml  release.yml
crates/hx-bhc/: Cargo.toml
crates/hx-bhc/src/: builtin_packages.rs  compile.rs  full_native.rs  lib.rs  native.rs  native_builder.rs  package_build.rs  package_db.rs  repl.rs
crates/hx-cabal/: Cargo.toml
crates/hx-cabal/src/: build.rs  edit.rs  full_native.rs  native.rs  package_build.rs  package_db.rs  server.rs
crates/hx-cabal/tests/: native_deps_spike.rs
crates/hx-cache/: Cargo.toml
crates/hx-cache/src/: artifacts.rs  bhc_store.rs  build_state.rs  lib.rs  store.rs
crates/hx-cli/: Cargo.toml
crates/hx-cli/benches/: cli_bench.rs
crates/hx-cli/src/: cli.rs  main.rs  plugins.rs
crates/hx-compiler/: Cargo.toml
crates/hx-config/: Cargo.toml
crates/hx-core/: Cargo.toml
crates/hx-doctor/: Cargo.toml
crates/hx-lock/: Cargo.toml
crates/hx-lsp/: Cargo.toml
crates/hx-plugins/: Cargo.toml
crates/hx-solver/: Cargo.toml
crates/hx-telemetry/: Cargo.toml
crates/hx-toolchain/: Cargo.toml
crates/hx-ui/: Cargo.toml
crates/hx-warnings/: Cargo.toml
docs/: BENCHMARKS.md  BHC_NATIVE_BUILD.md  BHC_PLATFORM.md  CROSS_COMPILATION.md  GETTING_STARTED.md  STACKAGE.md
scripts/: benchmark-comparison.sh  bhc-smoke.sh  real-world-test.sh
(+45 files in other folders)
