[package]
name = "hx-compiler"
description = "Compiler backend abstraction for hx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

hx-ui.workspace = true
