[package]
# Published to crates.io as `hx-ls`: the `hx-lsp` name is owned by an unrelated
# crate. The Rust library name stays `hx_lsp` (see [lib]) so imports are unchanged.
name = "hx-ls"
description = "Language Server Protocol implementation for hx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "hx_lsp"

[dependencies]
hx-core.workspace = true
hx-config.workspace = true
hx-cabal.workspace = true
hx-toolchain.workspace = true
hx-ui.workspace = true

thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true

tower-lsp = "0.20"
dashmap = "6"
notify = "6.1"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile.workspace = true
